# fern

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
docs/: COVERAGE.md
src/: client.rs  daemon.rs  eval.rs  main.rs  mux.rs  parse.rs  repl.rs  store.rs  tree.rs  wire.rs
tests/: cli.rs
