[package]
name = "fern"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-recursion = "1"
crossterm = "0.27"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
vt100 = "0.16.2"

[dev-dependencies]
# Integration tests drive the real client under a PTY (raw-mode attach).
portable-pty = "0.8"
